--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="red_error">#FF0000</color>
 
     <color name="splash_back">#E64A15</color>
+    <color name="app_dark">#9E132A</color>
+    <color name="app_light">#CE102C</color>
+    <color name="gray_light">#F3F3F3</color>
 </resources>
