--- a/app/src/main/res/layout/fragment_raplot_data.xml
+++ b/app/src/main/res/layout/fragment_raplot_data.xml
@@ -7,10 +7,10 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/seekBar1" />
+        android:layout_height="match_parent"/>
+    <!--android:layout_above="@+id/seekBar1"-->
 
-    <SeekBar
+    <!--SeekBar
         android:id="@+id/seekBar2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,6 +56,6 @@
         android:layout_marginBottom="15dp"
         android:layout_marginRight="10dp"
         android:gravity="right"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium" /-->
 
 </RelativeLayout>
